<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="#dd440055"
    android:paddingBottom="5dp" >
    <TextView android:id="@+id/header_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/header"
        android:padding="5dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:gravity="center"
        android:textColor="#ffffff44" />
    <LinearLayout
    	android:layout_width="fill_parent" 
    	android:layout_height="wrap_content"
    	android:gravity="center"
    	android:weightSum="1.0" >
	    <Button android:id="@+id/connect_btn"
	        android:layout_width="200sp"
	        android:layout_height="wrap_content"
	        android:text="@string/connect" />
	    <Button android:id="@+id/disconnect_btn"
	        android:layout_width="200sp"
	        android:layout_height="wrap_content"
	        android:text="@string/disconnect" />
	    <Button android:id="@+id/speech_btn"
	        android:layout_width="200sp"
	        android:layout_height="wrap_content"
	        android:text="@string/speech" />
	    <Button android:id="@+id/stop_btn"
	        android:layout_width="200sp"
	        android:layout_height="wrap_content"
	        android:text="@string/stop" />
	</LinearLayout>
    <TextView android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/commands_intro"
            android:textStyle="italic" />
    <ListView android:id="@+id/command_list"
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingTop="3dp"
        android:paddingRight="10dp"
        android:paddingBottom="3dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/commands_bg" />
</LinearLayout>